Bug 489149 - All inactive windows are black while compositing is active
Summary: All inactive windows are black while compositing is active
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.0
Platform: Fedora RPMs Linux
: NOR grave
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-25 00:09 UTC by cacho96
Modified: 2025-10-17 20:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments
All my windows except the active one are shown black (194.15 KB, image/jpeg)
2024-06-25 00:09 UTC, cacho96
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cacho96 2024-06-25 00:09:24 UTC
Created attachment 170938 [details]
All my windows except the active one are shown black

SUMMARY
I was never able to use Wayland, since all windows are shown plain black, except the active one (clicking or hovering).
I tried with all Plasma 5.X, with 6.04 and now with 6.1.0. I have to install the X11 version.

STEPS TO REPRODUCE
1. Start wayland
2. My usual consoles and gkrellm are all black, except for the active one.

OBSERVED RESULT
Except for the panel and the wallpaper, all inactive windows are shown solid black.

EXPECTED RESULT
windows shown.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 40 / Plasma 6.1.0

KDE Plasma Version: 6.1.0
KDE Frameworks Version: kf5-frameworkintegration-5.116.0.2.fc40.x86_64, kf5-frameworkintegration-libs-5.116.0.2.fc40.x86_64, kf6-frameworkintegration-6.3.0.1.fc40.x86_64, kf6-frameworkintegration-libs-6.3.0.1.fc40.x86_64
Qt Version: qt-4.8.7-76.fc40.x86_64

ADDITIONAL INFORMATION
Screenshot attached.
Comment 1 Zamundaaa 2024-06-25 12:18:13 UTC
Do you have some non-default effects installed and enabled? Does this also happen in a live boot of Fedora KDE 40?
Comment 2 cacho96 2024-06-25 19:31:34 UTC
(In reply to Zamundaaa from comment #1)
> Do you have some non-default effects installed and enabled? Does this also
> happen in a live boot of Fedora KDE 40?

The only non-default thing that I could think of is a tiny plasma script to inform window position and size when moving and resizing.

Wayland in a live boot Fedora KDE 40 works perfectly. Probably there is some plasma X11 config that is messing with wayland...?
Comment 3 cacho96 2024-06-27 16:23:50 UTC
Updated to Plasma 6.1.1-1.
Now startplasma-wayland shows a solid black screen and a cursor.
I had to kill plasma from a virtual console.
Comment 4 cacho96 2024-07-10 01:15:32 UTC
(In reply to cacho96 from comment #2)
> (In reply to Zamundaaa from comment #1)
> > Do you have some non-default effects installed and enabled? Does this also
> > happen in a live boot of Fedora KDE 40?
> 
> The only non-default thing that I could think of is a tiny plasma script to
> inform window position and size when moving and resizing.
> 
> Wayland in a live boot Fedora KDE 40 works perfectly. Probably there is some
> plasma X11 config that is messing with wayland...?

I think this is what I was asked to provide.
Comment 5 Zamundaaa 2024-07-10 13:54:09 UTC
(In reply to cacho96 from comment #2)
> The only non-default thing that I could think of is a tiny plasma script to
> inform window position and size when moving and resizing.
Could you try disabling that? Also, do you have HDR or a color profile set for your display?
Comment 6 cacho96 2024-07-10 21:59:46 UTC
(In reply to Zamundaaa from comment #5)
> (In reply to cacho96 from comment #2)
> > The only non-default thing that I could think of is a tiny plasma script to
> > inform window position and size when moving and resizing.
> Could you try disabling that? Also, do you have HDR or a color profile set
> for your display?

Disabling the script does nothing.
No, I don't have any special screen config that I know of...
Where would that be?
Comment 7 cacho96 2024-07-10 22:01:04 UTC
BTW, I have 2 computers with different hardware but the same problem.
Comment 8 cacho96 2024-07-16 04:04:51 UTC
Upgraded to plasma 6.1.2.1.

Now one computer works fine, while the other still has the same problem.
The computer that works fine respects my configuration  (no animations, etc).
The one that has the problem, does not respect it.
Comment 9 cacho96 2024-07-16 04:06:18 UTC
I can try copying the whole KDE configuration from one box to the other to see what happens...
Which folders should I copy?
Comment 10 cacho96 2024-07-16 04:29:32 UTC
It seems that the problem relies on the Compositor (whatever that means).
If I enable the compositor for startplasma-x11, I also don't see the windows.
Same problem occurs if I press Alt-Shift-F12.
I do not know how to disable the compositor in Wayland, and Alt-Shift-F12 does not seem to do anything.
Comment 11 Zamundaaa 2025-10-08 12:53:34 UTC
The "dim inactive" effect can do this, if you set its strength to 100%. Please check if the issue still happens if you turn the effect off.
Comment 12 Bug Janitor Service 2025-10-08 13:19:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8213
Comment 13 cacho96 2025-10-08 18:20:56 UTC
(In reply to Zamundaaa from comment #11)
> The "dim inactive" effect can do this, if you set its strength to 100%.
> Please check if the issue still happens if you turn the effect off.

Actually, I just tried Wayland after more than a year, and it seems to be working fine now, with or without dim.
So far, it seems to be working as X11. Will report back later if I found problems.

Some system details:

Kernel 6.16.10-200.fc42.x86_64 #1 SMP PREEMPT_DYNAMIC Thu Oct  2 19:23:55 UTC 2025 x86_64 GNU/Linux
Fedora 42 fully updated
KDE plasma 6.4.5.1

qt5-qtwayland-5.15.17.1.fc42.x86_64
qt6-qtwayland-6.9.2.1.fc42.x86_64
sddm-wayland-plasma-6.4.5.2.fc42.noarch
wayland-devel-1.24.0.1.fc42.x86_64
wayland-utils-1.2.0.6.fc42.x86_64
xorg-x11-server-Xwayland-24.1.8.1.fc42.x86_64
Comment 14 cacho96 2025-10-08 18:25:55 UTC
[OT] BTW, is there a way to set the monitor's gamma in Wayland, like I do in X11? One year ago there was no way to do this, and this was the main reason to stay with X11.
Comment 15 Vlad Zahorodnii 2025-10-13 18:06:58 UTC
Git commit 48afc72eb703b5ac6d4e785b70933ecf14fae02f by Vlad Zahorodnii.
Committed on 13/10/2025 at 17:16.
Pushed by vladz into branch 'master'.

plugins/diminactive: Clamp strength to 10-90% range

With strength values such as 100%, the window will become completely
black. With too low strength values, the effect serves no purpose.

M  +1    -1    src/plugins/diminactive/diminactive.cpp
M  +4    -1    src/plugins/diminactive/diminactive_config.ui

https://invent.kde.org/plasma/kwin/-/commit/48afc72eb703b5ac6d4e785b70933ecf14fae02f
Comment 16 Vlad Zahorodnii 2025-10-13 19:37:18 UTC
Git commit 78c0549b9890ff4d4ca500fdea82c31eecf70908 by Vlad Zahorodnii.
Committed on 13/10/2025 at 18:45.
Pushed by vladz into branch 'Plasma/6.5'.

plugins/diminactive: Clamp strength to 10-90% range

With strength values such as 100%, the window will become completely
black. With too low strength values, the effect serves no purpose.
(cherry picked from commit 48afc72eb703b5ac6d4e785b70933ecf14fae02f)

M  +1    -1    src/plugins/diminactive/diminactive.cpp
M  +4    -1    src/plugins/diminactive/diminactive_config.ui

https://invent.kde.org/plasma/kwin/-/commit/78c0549b9890ff4d4ca500fdea82c31eecf70908