plugins/diminactive: Clamp strength to 10-90% range

With strength values such as 100%, the window will become completely
black. With too low strength values, the effect serves no purpose.

BUG: 489149
(cherry picked from commit 48afc72eb703b5ac6d4e785b70933ecf14fae02f)